add import and export pilots

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>koc</title>
   </head>
   <body>
     <div id="app"></div>
