--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
   </head>
   <body>
     <div id="app"></div>
+
+    @vite(['src/main.js'])
+
     <!-- <script type="module" src="/src/main.js"></script> -->
+
      <script src="/dist/build.js"></script>
+     
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
   </body>
