--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>koc</title>
-    @vite(['src/main.js'])
+    @vite('build/assets/main.js')
   </head>
   <body>
     <div id="app"></div>
