--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>koc</title>
-    @vite('build/assets/main.js')
+    @vite('src/main.js')
   </head>
   <body>
     <div id="app"></div>
@@ -17,7 +17,7 @@
 
     <!-- <script type="module" src="/src/main.js"></script> -->
 
-     <script src="/dist/build.js"></script>
+     <!-- <script src="/dist/build.js"></script> -->
 
     <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"></script>
